--- a/public/src/app/home/home.component.html
+++ b/public/src/app/home/home.component.html
@@ -21,6 +21,7 @@
 
 <body>
     <div class="container">
+      <h1>What ingredients do you have?</h1>
             <div class="accordion" id="accordionExample">
                     <div class="card">
                       <div class="card-header" id="headingOne">
