--- a/public/src/app/home/home.component.html
+++ b/public/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -37,17 +37,96 @@
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                     data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                        Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                        shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                        proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic
-                        synth nesciunt
-                        you probably haven't heard of them accusamus labore sustainable VHS.
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="All Purpose Flour" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                All Purpose Flour
+                            </label>
+                        </div>
+                        <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="Bread Flour" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Bread Flour
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Whole-wheat Flour" id="defaultCheck1">
+                                    <label class="form-check-label" for="defaultCheck1">
+                                        Whole-wheat Flour
+                                    </label>
+                                </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Baking Powder" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Baking Powder
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Baking Soda" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Baking Soda
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Rolled Oats" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Rolled Oats
+                            </label>
+                        </div>
+                        <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="Salt" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Salt
+                                </label>
+                            </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Yeast" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Yeast
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Cake Mix" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Cake Mix
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Graham Crackers" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Graham Crackers
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Coconut Flakes" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Coconut Flakes
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Cornmeal" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Cornmeal
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Cocoa Powder" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Cocoa Powder
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Nuts" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Nuts
+                            </label>
+                        </div>
+                        <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="Almond Meal" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Almond Meal
+                                </label>
+                            </div>
                     </div>
                 </div>
             </div>
