--- a/public/src/app/home/home.component.html
+++ b/public/src/app/home/home.component.html
@@ -38,23 +38,25 @@
                     data-parent="#accordionExample">
                     <div class="card-body">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="All Purpose Flour" id="defaultCheck1">
+                            <input class="form-check-input" type="checkbox" value="All Purpose Flour"
+                                id="defaultCheck1">
                             <label class="form-check-label" for="defaultCheck1">
                                 All Purpose Flour
                             </label>
                         </div>
                         <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Bread Flour" id="defaultCheck1">
-                                <label class="form-check-label" for="defaultCheck1">
-                                    Bread Flour
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="Whole-wheat Flour" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck1">
-                                        Whole-wheat Flour
-                                    </label>
-                                </div>
+                            <input class="form-check-input" type="checkbox" value="Bread Flour" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Bread Flour
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Whole-wheat Flour"
+                                id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Whole-wheat Flour
+                            </label>
+                        </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Baking Powder" id="defaultCheck1">
                             <label class="form-check-label" for="defaultCheck1">
@@ -74,11 +76,11 @@
                             </label>
                         </div>
                         <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Salt" id="defaultCheck1">
-                                <label class="form-check-label" for="defaultCheck1">
-                                    Salt
-                                </label>
-                            </div>
+                            <input class="form-check-input" type="checkbox" value="Salt" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Salt
+                            </label>
+                        </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Yeast" id="defaultCheck1">
                             <label class="form-check-label" for="defaultCheck1">
@@ -122,11 +124,11 @@
                             </label>
                         </div>
                         <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Almond Meal" id="defaultCheck1">
-                                <label class="form-check-label" for="defaultCheck1">
-                                    Almond Meal
-                                </label>
-                            </div>
+                            <input class="form-check-input" type="checkbox" value="Almond Meal" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Almond Meal
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,19 +141,69 @@
                         </button>
                     </h2>
                 </div>
+
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                        Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                        shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                        proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic
-                        synth nesciunt
-                        you probably haven't heard of them accusamus labore sustainable VHS.
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="White Sugar" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                White Sugar
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Brown Sugar" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Brown Sugar
+                            </label>
+                        </div>
+                        <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="Powdered Sugar" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Powdered Sugar
+                                </label>
+                            </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Honey" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Honey
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Maple Syrup" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Maple Syrup
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Molasses" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Molasses
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Rolled Oats" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Rolled Oats
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Agave Nectar" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Agave Nectar
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Corn Syrup" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Corn Syrup
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Artificial Sweetener" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Artificial Sweetener
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,17 +218,12 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                        Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                        shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                        proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic
-                        synth nesciunt
-                        you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Brown Sugar" id="defaultCheck1">
+                                    <label class="form-check-label" for="defaultCheck1">
+                                        Brown Sugar
+                                    </label>
+                                </div>
                     </div>
                 </div>
             </div>
