--- a/public/src/app/home/home.component.css
+++ b/public/src/app/home/home.component.css
@@ -2,14 +2,18 @@
   margin: 0;
   padding: 0;
 }
+.head h4, .head button{
+  display: inline-block;
+}
+.head button{
+  width: 90px;
+}
 #subbtn{
   width: 250px;
-margin: auto; 
- background: rgb(38, 165, 0);
-}
-#subbtn {
-  background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-  background-color:#ededed;
+ margin: auto;
+ }
+ #subbtn {
+    background:linear-gradient(to bottom, #E5BA9C 50%, rgb(144, 124, 118) 100%);
   border-radius:4px;
   border:1px solid #d6bcd6;
   display:inline-block;
@@ -19,25 +23,29 @@ margin: auto;
   font-size:17px;
   padding:7px 25px;
   text-decoration:none;
- width: 93%;
-}
-#subbtn:hover {
-  background:linear-gradient(to bottom, #00ff37 5%, #0c7c08 100%);
-  background-color:#bab1ba;
-}
+  width: 93%;
+ }
+ #subbtn:hover {
+  background:linear-gradient(to bottom,rgb(128, 103, 96) 10%, #E5BA9C 100%);
+  border:1px solid #E5BA9C;
+ }
+ #subbtn:active {
+  position:relative;
+  top:1px;
+ }
 #subbtn:active {
   position:relative;
   top:1px;
 }
 .container {
-        padding-bottom: 3%;
-        background-size: cover;
-        min-height: 900px;
-        min-width: 100%;
-        background-image: url('https://visualcocaine.org/public/uploads/large/81497721030kokdx93yy4rs2fvgviqbxhc53u3x2ppgu7im4mqs2xbpgfvpfsogkj8cjdiinu8so47gf6yui1g89eafqmz3aj9by3zvtb1demhw.jpg');
+  padding-top: 1.3%;
+  padding-bottom: 3%;
+  background-size: cover;
+  min-height: 900px;
+  min-width: 100%;
+  background-image: url('https://visualcocaine.org/public/uploads/large/81497721030kokdx93yy4rs2fvgviqbxhc53u3x2ppgu7im4mqs2xbpgfvpfsogkj8cjdiinu8so47gf6yui1g89eafqmz3aj9by3zvtb1demhw.jpg');
 }
-
-button {
+.main button {
 	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
 	background-color:#ededed;
 	border-radius:4px;
@@ -54,13 +62,13 @@ button {
     width: 100%;
     
 }
-button:hover {
+.main button:hover {
 	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
   background-color:#bab1ba;
   text-decoration: none;
 
 }
-button:active {
+.main button:active {
 	position:relative;
   top:1px;
   text-decoration: none;
@@ -88,7 +96,7 @@ h4{
     font: 400 50px/1 'Oleo Script', Helvetica, sans-serif;
     color: white;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
-    padding-top: 2%;
+    
     text-shadow: 2px 2px 1px rgba(206,89,55,0.47);
     margin-bottom:2px;
   }
@@ -115,16 +123,24 @@ h4{
     border-radius: 20px;
   }
   .result a{
+    background:linear-gradient(to bottom, #E5BA9C 15%, rgb(165, 141, 135) 100%);
+     border-radius:4px;
+     border:1px solid #d6bcd6;
+     display:inline-block;
+    cursor:pointer;
+    color:#4a402b;
+  text-decoration: none;
+     font-family:Arial;
+    text-shadow:0px 1px 0px #e1e2ed;
     padding: 1px 18px 1px 18px;
-    background: rgba(206,89,55,0.47);
-    border-radius: 6px;
     margin-top: 2%;
     text-decoration: none;
-    color: black;
   }
   .result a:hover {
-    background:linear-gradient(to bottom, #00ff37 5%, #0c7c08 100%);
-    background-color:#bab1ba;
+    background:linear-gradient(to bottom, rgb(182, 147, 137) 15%, #E5BA9C 100%);
+    border:1px solid #E5BA9C;
+    text-decoration: none;
+    color:#4a402b;
   }
   .result a:active {
     position:relative;
@@ -135,7 +151,7 @@ h4{
     display: inline-block;
   }
   .result p{
-    margin-top: -20px;
+    margin-top: -10px;
     width: 50%;
     font-size: 16px;
     margin-left: 2%;
@@ -162,12 +178,22 @@ h4{
     }
     .results{
       width: 100%;
+      margin-left: 0%;
     }
     .result{
       width: 90%;
     }
+    .results h5{
+      font-size: 26px;
+      height: 62px;
+    }
     .results p{
       width: 100%;
+    }
+    .result p{
+      margin-top: 0;
+      font-size: 18px;
+
     }
   
   h4{
